--- a/style.css
+++ b/style.css
@@ -611,6 +611,7 @@ ul.quote-list {
         justify-content: center;
         display: flex;
         flex: 1;
+        border-left: 2px solid #323232;
     }
 
     .modal {
@@ -623,7 +624,7 @@ ul.quote-list {
 
     .quote-panel {
         border-bottom: none;
-        border-right: 5px solid #323232;
+        border-right: 2px solid #323232;
         flex: 1;
     }
 }
