--- a/style.css
+++ b/style.css
@@ -637,6 +637,22 @@ ul.quote-list {
         max-width: 60%;
         gap: 0;
     }
+
+    .about-main {
+        padding-top: 64px;
+    }
+
+    .about-card {
+        gap: 32px;
+    }
+
+    .about-card-text{
+        margin: 0;
+    }
+
+    .text-slides {
+        flex: 1.5;
+    }
 }
 
 @media only screen and (max-width: 768px) {
