--- a/style.css
+++ b/style.css
@@ -197,7 +197,6 @@ ul.quote-list {
 }
 
 .hero-sample {
-
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 50%), 0 6px 20px 0 rgb(0 0 0 / 50%);
 }
 
@@ -601,6 +600,53 @@ ul.quote-list {
     user-select: none; /* Standard syntax */
 }
 
+  
+.container {
+    padding: 16px;
+    text-align: center;
+}
+  
+/*background*/
+.popup-error {
+    display: none;
+    position: fixed;
+    cursor: pointer;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(5px);
+    padding-top: 50px;
+}
+  
+/* Popup Content/Box */
+.popup-content {
+    background-color: #fff;
+    margin: 5% auto 15% auto;
+    border: 1px solid #888;
+    width: 30%;
+    font-size: 36px;
+}
+  
+/* The (x) button */
+.close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+}
+  
+.close:hover,
+.close:focus {
+    cursor: pointer;
+}
+  
+
 @media only screen and (min-width: 769px) {
     /*For larger screens to display index as horizontal layout*/
     .main {
@@ -612,11 +658,17 @@ ul.quote-list {
         justify-content: center;
         display: flex;
         flex: 1;
-        border-left: 2px solid #323232;
     }
 
     .modal {
+        padding: 32px;
         justify-content: space-between;
+        box-shadow: inset 3px -3em 3em 0px rgb(0 0 0 / 10%), 0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
+    }
+
+    .quote-panel-container {
+        padding: 32px;
+        box-shadow: inset 3px -3em 3em 0px rgb(0 0 0 / 10%), 0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
     }
 
     .modal-header {
@@ -625,12 +677,12 @@ ul.quote-list {
 
     .quote-panel {
         border-bottom: none;
-        border-right: 2px solid #323232;
+        
         flex: 1;
     }
 
     #img-panel {
-        border-top: 10px solid #323232;
+        border: none;
     }
 
     .img-panel-main {
@@ -703,6 +755,14 @@ ul.quote-list {
         font-size: 16px;
     }
 
+    #modal-button {
+        max-width: 100%;
+    }
+
+    .copy-link-input {
+        max-width: 90%;
+    }
+
     .footer {
         padding: 1em;
     }
@@ -750,5 +810,13 @@ ul.quote-list {
 
     .hero-text-button, #modal-button {
         font-size: 16px;
+    }
+
+    .popup-content {
+        background-color: #fff;
+        margin: 5% auto 15% auto;
+        border: 1px solid #888;
+        width: 80%;
+        font-size: 24px;
     }
 }
