Add etchasketch link and disable for mobile

--- a/style.css
+++ b/style.css
@@ -954,4 +954,8 @@ ul.quote-list {
     .next {
         right: 1%;
     }
+
+    #etchasketch-link { /* disabled due to mobile imcompatibility */
+        display: none;
+    }
 }
