--- a/style.css
+++ b/style.css
@@ -566,17 +566,17 @@ ul.quote-list {
     background-color: #ededed;
     border: 1px solid #323232;
     border-radius: 0px;
-    box-shadow: 0 9px #999;
+    box-shadow: 0 9px #323232;
     transition: none;
     font-size: 24px;
 }
 
 .erase-button:hover {
-    background-color: orange;
+    background-color: darkgray;
 }
 
 .erase-button:active {
-  background-color: orange;
+  background-color: darkgray;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
@@ -612,12 +612,12 @@ ul.quote-list {
 }
 
 .grid-size-button:hover, .grid-size-button:active {
-    background-color:orange;
+    background-color:darkgray;
     cursor: pointer;
 }
 
-.grid-size-button:active {
-    transform: translateY(4px);
+.grid-size-button-selected {
+    background-color: darkgray;
 }
 
 .color-container {
