--- a/style.css
+++ b/style.css
@@ -9,22 +9,33 @@ html {
 
 body {
     margin: 0;
+    font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .background {
-    background-color: #6E6E6E;
+    background-color: #DDD0C8;
 }
 
 .body-container {
-    font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
+    animation: fadeInAnimation ease 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
     margin: 0;
     margin-right: auto;
     margin-left: auto;
     min-height: 100vh;
-    max-width: 140vh;
+    max-width: 100vh;
     display: flex;
     flex-flow: column nowrap;
-    background-color: #6E6E6E;
 }
 
 h1 {
@@ -70,11 +81,14 @@ button {
 }
 
 .header-links {
+    flex: 1;
     display: flex;
+    max-width: 140vh;
     gap: 0.5rem;
     align-items: center;
     justify-content: center;
     margin: 32px;
+    font-size: 18px;
 }
 
 .a-header {
@@ -145,8 +159,11 @@ ul.quote-list {
 }
 
 .header {
+    display: flex;
+    justify-content: center;
     background-color: #323232;
     color:#ffffff;  
+    margin-bottom: 32px;
 }
 
 .hero-contents, .quote-panel, .sign-up-panel, #img-panel {
@@ -168,12 +185,6 @@ ul.quote-list {
 .hero-text-main {
     margin: 32px 0px;
     font-size: 24px;
-}
-
-
-.header-links {
-    font-size: 18px;
-    
 }
 
 .hero-text-button {
@@ -219,7 +230,6 @@ ul.quote-list {
     font-weight: 800;
     font-size: 36px;
     color: #323232;
-    text-decoration: underline;
 }
 
 .img-panel-main {
@@ -251,7 +261,7 @@ ul.quote-list {
     font-size: 36px;
     color: #323232;
     text-align: center;
-    text-decoration: underline;
+
 }
 
 .quote-container {
@@ -308,7 +318,6 @@ ul.quote-list {
     font-weight: bold;
     font-size: 36px;
     white-space: nowrap;
-    text-decoration: underline;
 }
 
 .modal-text {
@@ -677,6 +686,7 @@ ul.quote-list {
 /* END OF ETCHASKETCH GAME */
 
 .footer {
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -829,12 +839,12 @@ ul.quote-list {
         flex: 1;
         padding: 32px;
         justify-content: space-between;
-        box-shadow: inset 3px -3em 3em 0px rgb(0 0 0 / 10%), 0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
+        box-shadow:  0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
     }
 
     .quote-panel-container {
         padding: 32px;
-        box-shadow: inset 3px -3em 3em 0px rgb(0 0 0 / 10%), 0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
+        box-shadow:  0 0 0 2px #323232, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
     }
 
     .modal-header {
@@ -852,7 +862,6 @@ ul.quote-list {
     }
 
     .img-panel-main {
-        max-width: 60%;
         gap: 0;
     }
 
