Add possible fix for body overflow on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     margin: 0;
     font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
