--- a/style.css
+++ b/style.css
@@ -314,7 +314,6 @@ ul.quote-list {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
-    
     text-align: center;
 }
 
@@ -1253,4 +1252,26 @@ ul.quote-list {
         font-size: 16px;
     }
 
+    /* calculator */
+    #calculator {
+        max-width: 100vw;
+        padding: 0px;
+        margin: 0vw;
+    }
+    
+    
+    #button-panel {
+        margin: 16px;
+        padding: 0px;
+    }
+    
+    .number-button, .operator-button, #clear, #equals {
+        color: white;
+        font-size: 48px;
+        width: 20vw;
+        height: 20vw;
+        padding: 0px;
+        margin: 4px;
+    }
+    
 }
